--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 
         <div class="info-text login">
             <h2 class="animation" style="--i:0; --j:20">Welcome Back!</h2>
-            <p class="animation" style="--i:1; --j:21">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti,rem?</p>
+            <p class="animation" style="--i:1; --j:21">Your next career move is waiting. Log in to explore opportunities and take the next step in your journey.</p>
         </div>
 
         <div class="form-box register">
@@ -95,8 +94,7 @@
 
         <div class="info-text register">
             <h2 class="animation" style="--i:17; --j:0;">Welcome Back!</h2>
-            <p class="animation" style="--i:18; --j:1;">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti,rem?</p>
+            <p class="animation" style="--i:18; --j:1;">Start your journey today! Create an account to access top job opportunities and connect with the best employers.</p>
         </div>
 
     </div>
