--- a/JobHelperProject/index.html
+++ b/JobHelperProject/index.html
@@ -586,7 +586,7 @@ initializeDefault();
         <h2>Job-Search Smarter?
             <br><span>We make it easy</span>
         </h2><br><br><br>
-        <center><button id="search-button" class="s-btn"><span>Get Started For Free</span></button></center>
+        <center><button id="search-button" class="s-btn1"><span>Get Started For Free</span></button></center>
     </div>
 </section>
 
@@ -718,7 +718,7 @@ window.addEventListener("click", (e) => {
 });
 
     document.addEventListener("DOMContentLoaded", () => {
-    document.querySelectorAll(".s-btn,.btn1,#explore,#learn-more").forEach(button => {
+    document.querySelectorAll(".s-btn,.btn1,#explore,#learn-more,.s-btn1").forEach(button => {
         button.addEventListener("click", () => {
             window.location.href = "./jobs.html";
         });
